--- a/css/styles.css
+++ b/css/styles.css
@@ -84,13 +84,20 @@ img {
   display: flex;
   gap: 50px;
   align-items: center;
+
 }
 .contacts {
   display: flex;
   margin-left: auto;
 }
 .site-nav .link {
+  padding-top: 24px;
+  padding-bottom: 24px;
   color: var(--text-grey-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site-nav .link:hover,
 .site-nav .link:focus,
@@ -99,7 +106,19 @@ img {
 }
 .site-nav .link.current {
   color: var(--accent);
+  position: relative;
 }
+.site-nav .current::after {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent);
+  border-radius: 2px;
+}
+
 .contacts-link {
   display: flex;
   align-items: center;
@@ -111,6 +130,10 @@ img {
 }
 .contacts .link {
   color: var(--text-lightgrey-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts .link:hover,
 .contacts .link:focus,
@@ -253,6 +276,28 @@ img {
   display: flex;
   gap: 30px;
 }
+.activities-box {
+  position: relative;
+}
+
+.activities-label {
+  position: absolute;
+  bottom: 0;
+  padding: 27px;
+  width: 370px;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+.activities-label-title {
+  font-weight: 700;  
+  font-size: 14px;
+  line-height: 1.1428;
+  letter-spacing: 0.03em;
+  color: var(--text-white-color);
+  text-transform: uppercase;
+  text-align: center;
+}
+
 /* SECTION TEAM  */
 .team {
   padding-top: 94px;
@@ -316,6 +361,10 @@ img {
   justify-content: center;
   color: var(--elemnt-color);
 
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .team-social-link:hover,
 .team-social-link:focus {
@@ -331,6 +380,7 @@ img {
   width: 20px;
   height: 20px;
   fill: currentColor;
+
 }
 
 
@@ -356,11 +406,16 @@ img {
   color: var(--elemnt-color);
   border: 1px solid var(--elemnt-color);
   border-radius: 4px;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:hover,
 .clients-link:focus {
   border: 1px solid var(--accent);
   color: var(--accent);
+
 }
 
 .clients-icon {
@@ -405,6 +460,11 @@ address {
 .address-link {
   color: var(--text-white-opacity);
 }
+address a {
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 address a:hover,
 address a:focus,
 address a:active {
@@ -441,6 +501,10 @@ address a:active {
   justify-content: center;
   border-radius: 50%;
   background-color: var(--elemnt-color-secondary);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-socials-link:hover,
 .footer-socials-link:focus {
@@ -482,6 +546,8 @@ address a:active {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn .all{
   padding-top: 6px;
