--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
   --elemnt-color-secondary: rgba(255, 255, 255, 0.1);
   --elemnt-white-color: #ffffff;
   --elemnt-grey-color: #757575;
+  --backdrop-bg:rgba(0, 0, 0, 0.2);
 }
 body {
   background-color: var(--primary-bcg-color);
@@ -598,4 +599,53 @@ address a:active {
   line-height: 1.875;
   letter-spacing: 0.03em;
   color: var(--text-lightgrey-color);
+}
+/* модальное окно  */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--backdrop-bg) ;
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  min-width: 528px;
+  min-height: 581px;
+  background-color: var(--primary-bcg-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  display: block;
+  width: 30px;
+  height: 30px;
+  justify-content: center; 
+  align-items: center;
+
+  background-color: var(--primary-bcg-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+
+  cursor: pointer;
+}
+.close-btn-icon {
+  display: block;
+  width: 18px;
+  height: 18px;
+  fill: currentColor;
 }
