--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
   --elemnt-white-color: #ffffff;
   --elemnt-grey-color: #757575;
   --backdrop-bg:rgba(0, 0, 0, 0.2);
+  --overlay: rgba(33, 150, 243, 0.9)
 }
 body {
   background-color: var(--primary-bcg-color);
@@ -600,6 +601,32 @@ address a:active {
   letter-spacing: 0.03em;
   color: var(--text-lightgrey-color);
 }
+.img-box {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+  background-color: var(--overlay);
+  transform: translateY(100%);
+  transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-link:hover .overlay,
+.portfolio-link:focus .overlay {
+  transform: translateY(0);
+}
+.overlay-text {
+  font-size: 18px;
+  line-height: 1.555;
+  letter-spacing: 0.03em;
+  color: var(--text-white-color);
+}
+
 /* модальное окно  */
 .backdrop {
   position: fixed;
