--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,7 @@ img {
 }
 .nav {
   display: flex;
+  align-items: center;
 }
 .site-nav {
   display: flex;
@@ -92,8 +93,8 @@ img {
 }
 .site-nav .link {
   display: block;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 32px;
+  padding-bottom: 32px;
   color: var(--text-grey-color);
 
   transition-property: color;
@@ -112,7 +113,7 @@ img {
 .site-nav .current::after {
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
   content: "";
   width: 100%;
   height: 4px;
@@ -361,8 +362,9 @@ img {
   align-items: center;
   justify-content: center;
   color: var(--elemnt-color);
+  border-radius: 50%;
 
-  transition-property: color;
+  transition-property: background-color, fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -370,7 +372,6 @@ img {
 .team-social-link:hover,
 .team-social-link:focus {
   background-color: var(--accent);
-  border-radius: 50%;
 }
 .team-social-link:hover .team-social-icon,
 .team-social-link:focus .team-social-icon {
@@ -408,7 +409,7 @@ img {
   border: 1px solid var(--elemnt-color);
   border-radius: 4px;
 
-  transition-property: color;
+  transition-property: color, border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -503,7 +504,7 @@ address a:active {
   border-radius: 50%;
   background-color: var(--elemnt-color-secondary);
 
-  transition-property: color;
+  transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -612,7 +613,7 @@ address a:active {
   height: 100%;
   padding: 63px 24px;
   background-color: var(--overlay);
-  transform: translateY(100%);
+  transform: translateY(101%);
   transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-link:hover .overlay,
@@ -633,17 +634,20 @@ address a:active {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--backdrop-bg) ;
+  background-color: var(--backdrop-bg);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
 }
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   min-width: 528px;
   min-height: 581px;
   background-color: var(--primary-bcg-color);
@@ -651,6 +655,10 @@ address a:active {
     0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
 }
 .close-btn {
   position: absolute;
@@ -668,9 +676,30 @@ address a:active {
   border-radius: 50%;
 
   cursor: pointer;
+
+  animation-name: changeBgColor;
+  animation-duration: 1500ms;
+  animation-timing-function: linear;
+  animation-delay: 100ms;
+  animation-iteration-count: 3;
 }
 .close-btn-icon {
   width: 18px;
   height: 18px;
   fill: currentColor;
+}
+
+@keyframes changeBgColor {
+  0% {
+    background-color:var(--primary-bcg-color);
+  }
+  25% {
+    background-color: #FF5733;
+  }
+  50% {
+    background-color: #FFC300;
+  }
+  100% {
+    background-color: #DAF7A6;
+  }
 }
