--- a/css/styles.css
+++ b/css/styles.css
@@ -364,7 +364,7 @@ img {
   color: var(--elemnt-color);
   border-radius: 50%;
 
-  transition-property: background-color, fill;
+  transition-property: background-color, color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -572,6 +572,7 @@ address a:active {
 .portfolio-link {
   display: block;
   text-decoration: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-link:hover,
 .portfolio-link:focus {
